<resources>
    <string name="app_name">Prayer Times</string>
    <string name="prayer_times">Prayer Times</string>
    <string name="remaining_for_the_next_prayer">remaining time until <b>%s</b></string>
    <string name="_24h_format">24h Format</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="settings">Settings</string>
    <string name="prayers_reminder">Prayers Reminder</string>
    <string name="set_location">Set Location</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_the_app">Rate The App</string>
    <string name="share_the_app">Share The App</string>
    <string name="location">Location</string>
    <string name="auto_locate_me">Auto Locate Me</string>
    <string name="select_where_you_are">Select Where You Are</string>
    <string name="save_location">Save Location</string>
    <string name="select_location_method">You need to have one active location method</string>
    <string name="location_rational">We need the permission to access your location</string>
    <string name="couldnt_get_location">Couldn\'t get your location, Please select your location manually</string>
    <string name="location_updated">Location updated successfully</string>
    <string name="error_occured">An error occured</string>
    <string name="isha">Isha</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">Prayer Times Widget</string>
    <string name="click_to_load_data">Click to load data</string>
    <string name="notification_channel" translatable="false">Alarm Reminder</string>
    <string name="prayer_notification_title">%s Prayer</string>
    <string name="prayer_notification_message">%s prayer is now, Hurry Up!!</string>
    <string name="about_app">About the App</string>
    <string name="app_description">An app that shows muslim prayer times based on user selected location or auto defined user location.</string>
    <string name="version" translatable="false">V %s</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="set_manually">Set Manually</string>
    <string name="remaining_time_format">%1$sh %2$sm</string>
</resources>