<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_settings"
            android:layout_marginTop="@dimen/_20sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/_35sdp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/roboto_bold"
            android:textAllCaps="true"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:cardElevation="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prayers_reminder"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_centerVertical="true"/>

                <com.github.angads25.toggle.widget.LabeledSwitch
                    android:id="@+id/reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="14sp"
                    app:colorBorder="@color/black"
                    app:colorOn="@color/black"
                    app:on="false"
                    app:textOff=""
                    app:textOn=""
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/set_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardElevation="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/set_location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/share_the_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardElevation="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/share_the_app"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/rate_the_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardElevation="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/rate_the_app"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardElevation="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:cardElevation="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20ssp" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            app:cardElevation="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layoutDirection="ltr">
                <RelativeLayout
                    android:id="@+id/english_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/black">

                    <TextView
                        android:id="@+id/english"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/english"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/arabic_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:id="@+id/arabic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/arabic"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20ssp" />
                </RelativeLayout>
            </LinearLayout>



        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>