<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.PrayerTimes.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:theme="@style/Theme.PrayerTimes.AppWidgetContainer">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fajr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/fajr"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fajr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                tools:text="4:26 AM" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dhuhr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="1"
                android:text="@string/dhuhr"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dhuhr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                tools:text="11:43 PM" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/asr_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="1"
                android:text="@string/asr"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/asr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                tools:text="11:43 PM" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/maghrib_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="1"
                android:text="@string/maghrib"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/maghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                tools:text="11:43 PM" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/isha_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="1"
                android:text="@string/isha"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/isha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                tools:text="11:43 PM" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/click_to_load_data"
        android:textColor="@color/black"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginTop="@dimen/_35sdp"/>



</RelativeLayout>