<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LocationActivity"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_location"
            android:layout_marginTop="@dimen/_20sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="@dimen/_25sdp"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/roboto_bold"
            android:textAllCaps="true"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:cardElevation="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/set_manually"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp" />

                <com.github.angads25.toggle.widget.LabeledSwitch
                    android:id="@+id/set_manually"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="14sp"
                    app:textOff=""
                    app:textOn=""
                    app:on="true"
                    app:colorBorder="@color/black"
                    app:colorOn="@color/black"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/manual_location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:cardElevation="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_10sdp"
                android:layoutDirection="ltr">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_where_you_are"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_medium"/>

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_countries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_states"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_cities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_20sdp"

                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:text="@string/save_location"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            app:cardElevation="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_locate_me"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15ssp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_centerVertical="true"/>

                <com.github.angads25.toggle.widget.LabeledSwitch
                    android:id="@+id/auto_locate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="14sp"
                    app:textOff=""
                    app:textOn=""
                    app:on="false"
                    app:colorBorder="@color/black"
                    app:colorOn="@color/black"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>